--- a/css/style.css
+++ b/css/style.css
@@ -11,32 +11,36 @@
     background-color: rgb(248, 248, 244);
     display: flex;
     justify-content: space-between;
-}
-.logo {
-    margin: 1em;
-    background-color:   rgb(248, 248, 244);
-    border-radius: 50%;
-    box-shadow: -0.5px 5px 0.5em rgba(0, 0, 0, .3);
+    position: fixed;
+    box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, .35);
 }
 .logo img {
-    max-width: 150px;
-    padding: 1em;
+    margin: 1em 0 0.7em 1em;
+    width: 70%;
+    padding: 0.7rem;
+    border-radius: 50%;
+    box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, .5);
 }
 .nav_menu ul{
     display: inline-flex;
     list-style: none;
-    margin: 8rem 1.5rem 0 0;
+    margin: 6rem 1.5rem 0 0;
 }
 .nav_menu a {
     color: rgb(49, 48, 48);
     font-family: 'Roboto', sans-serif;
-    font-size: 1.3em;
+    font-size: 1em;
     list-style: none;
     text-decoration-line: none;
     padding: 0 1.5rem;
 }
-.main_image {
-    width: 100%;
-    height: auto;
-    background-image: url("/img/South\ Glenmore\ Park\,\ Calgary\,\ Canada.jpg");
+.main_picture p {
+    margin: -2rem 0 0 67rem;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 0.6rem;
+    text-shadow: black;
+}
+.booking_window {
+    background-color: whitesmoke;
 }
