--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     background-color: rgb(248, 248, 244);
     display: flex;
     justify-content: space-between;
-    position: fixed;
     box-shadow: 1rem 1rem 1rem rgba(0, 0, 0, .35);
 }
 .logo img {
@@ -34,6 +33,11 @@
     text-decoration-line: none;
     padding: 0 1.5rem;
 }
+.main_picture {
+    background-image: url('/img/southglenmorepark.jpg');
+    width: 50%;
+    height: 50%;
+}
 .main_picture p {
     color: rgb(219, 49, 49);
     font-family: 'Roboto', sans-serif;
@@ -43,7 +47,8 @@
 .booking_window {
     width: 35%;
     height: auto;
-    margin: -5rem 0 0 1rem;
+    margin: 0;
+    background-color: blue;
 }
 .booking_window  h1 {
     color: red;
